--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,73 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-64
-asgiref=3.8.1=pyhd8ed1ab_0
-bzip2=1.0.8=h10d778d_5
-ca-certificates=2024.2.2=h8857fd0_0
-django=5.0.4=pyhd8ed1ab_0
-libexpat=2.6.2=h73e2aa4_0
-libffi=3.4.2=h0d85af4_5
-libsqlite=3.45.3=h92b6c6a_0
-libzlib=1.2.13=h8a1eda9_5
-ncurses=6.4.20240210=h73e2aa4_0
-openssl=3.2.1=hd75f5a5_1
-pip=24.0=pyhd8ed1ab_0
-python=3.12.3=h1411813_0_cpython
-readline=8.2=h9e318b2_1
-setuptools=69.5.1=pyhd8ed1ab_0
-sqlparse=0.4.4=pyhd8ed1ab_0
-tk=8.6.13=h1abcd95_1
-typing_extensions=4.11.0=pyha770c72_0
-tzdata=2024a=h0c530f3_0
-wheel=0.43.0=pyhd8ed1ab_1
-xz=5.2.6=h775f41a_0
+archspec=0.2.3
+asgiref=3.8.1
+boltons=24.0.0
+brotli-python=1.1.0
+bzip2=1.0.8
+c-ares=1.28.1
+ca-certificates=2024.2.2
+certifi=2024.2.2
+cffi=1.16.0
+charset-normalizer=3.3.2
+colorama=0.4.6
+conda=24.3.0
+conda-libmamba-solver=24.1.0
+conda-package-handling=2.2.0
+conda-package-streaming=0.9.0
+distro=1.9.0
+django=5.0.4
+fmt=10.2.1
+icu=73.2
+idna=3.7
+jsonpatch=1.33
+jsonpointer=2.4
+krb5=1.21.2
+libarchive=3.7.2
+libcurl=8.7.1
+libcxx=16.0.6
+libedit=3.1.20191231
+libev=4.33
+libexpat=2.6.2
+libffi=3.4.2
+libiconv=1.17
+libmamba=1.5.8
+libmambapy=1.5.8
+libnghttp2=1.58.0
+libsolv=0.7.28
+libsqlite=3.45.3
+libssh2=1.11.0
+libxml2=2.12.6
+libzlib=1.2.13
+lz4-c=1.9.4
+lzo=2.10
+menuinst=2.0.2
+ncurses=6.4.20240210
+openssl=3.2.1
+packaging=24.0
+pip=24.0
+platformdirs=4.2.1
+pluggy=1.5.0
+pybind11-abi=4
+pycosat=0.6.6
+pycparser=2.22
+pysocks=1.7.1
+python=3.12.3
+python_abi=3.12
+readline=8.2
+reproc=14.2.4.post0
+reproc-cpp=14.2.4.post0
+requests=2.31.0
+ruamel.yaml=0.18.6
+ruamel.yaml.clib=0.2.8
+setuptools=69.5.1
+sqlparse=0.4.4
+tk=8.6.13
+tqdm=4.66.2
+truststore=0.8.0
+typing_extensions=4.11.0
+tzdata=2024a
+urllib3=2.2.1
+wheel=0.43.0
+xz=5.2.6
+yaml-cpp=0.8.0
+zstandard=0.22.0
+zstd=1.5.5
