--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ conda-package-handling=2.2.0
 conda-package-streaming=0.9.0
 distro=1.9.0
 django=5.0.4
+django-cors-headers=4.3.1
+djangorestframework=3.15.1
 fmt=10.2.1
 icu=73.2
 idna=3.7
