--- a/requirements.txt
+++ b/requirements.txt
@@ -1,119 +1,118 @@
-name: chat
-channels:
-  - conda-forge
-  - defaults
-dependencies:
-  - appdirs=1.4.4=pyh9f0ad1d_0
-  - archspec=0.2.3=pyhd8ed1ab_0
-  - asgiref=3.8.1=pyhd8ed1ab_0
-  - attrs=23.2.0=pyh71513ae_0
-  - autobahn=23.6.2=pyhd8ed1ab_0
-  - automat=22.10.0=pyhd8ed1ab_0
-  - bcrypt=4.1.2=py312h6e28e45_0
-  - beautifulsoup4=4.12.3=pyha770c72_0
-  - boltons=24.0.0=pyhd8ed1ab_0
-  - brotli-python=1.1.0=py312heafc425_1
-  - bzip2=1.0.8=h10d778d_5
-  - c-ares=1.28.1=h10d778d_0
-  - ca-certificates=2024.2.2=h8857fd0_0
-  - certifi=2024.2.2=pyhd8ed1ab_0
-  - cffi=1.16.0=py312h38bf5a0_0
-  - channels=4.0.0=pyhd8ed1ab_0
-  - charset-normalizer=3.3.2=pyhd8ed1ab_0
-  - colorama=0.4.6=pyhd8ed1ab_0
-  - conda=24.3.0=py312hb401068_0
-  - conda-libmamba-solver=24.1.0=pyhd8ed1ab_0
-  - conda-package-handling=2.2.0=pyh38be061_0
-  - conda-package-streaming=0.9.0=pyhd8ed1ab_0
-  - constantly=15.1.0=py_0
-  - cryptography=42.0.7=py312h7e81a9d_0
-  - daphne=3.0.2=pyhd8ed1ab_0
-  - distro=1.9.0=pyhd8ed1ab_0
-  - django=5.0.4=pyhd8ed1ab_0
-  - django-cors-headers=4.3.1=pyhd8ed1ab_0
-  - djangorestframework=3.15.1=pyhd8ed1ab_0
-  - fmt=10.2.1=h7728843_0
-  - freetype=2.12.1=h60636b9_2
-  - hyperlink=21.0.0=pyhd3deb0d_0
-  - icu=73.2=hf5e326d_0
-  - idna=3.7=pyhd8ed1ab_0
-  - incremental=22.10.0=pyhd8ed1ab_0
-  - jsonpatch=1.33=pyhd8ed1ab_0
-  - jsonpointer=2.4=py312hb401068_3
-  - krb5=1.21.2=hb884880_0
-  - lcms2=2.16=ha2f27b4_0
-  - lerc=4.0.0=hb486fe8_0
-  - libarchive=3.7.2=hd35d340_1
-  - libcurl=8.7.1=h726d00d_0
-  - libcxx=16.0.6=hd57cbcb_0
-  - libdeflate=1.20=h49d49c5_0
-  - libedit=3.1.20191231=h0678c8f_2
-  - libev=4.33=h10d778d_2
-  - libexpat=2.6.2=h73e2aa4_0
-  - libffi=3.4.2=h0d85af4_5
-  - libiconv=1.17=hd75f5a5_2
-  - libjpeg-turbo=3.0.0=h0dc2134_1
-  - libmamba=1.5.8=ha449628_0
-  - libmambapy=1.5.8=py312h67f5953_0
-  - libnghttp2=1.58.0=h64cf6d3_1
-  - libpng=1.6.43=h92b6c6a_0
-  - libsolv=0.7.28=h2d185b6_2
-  - libsqlite=3.45.3=h92b6c6a_0
-  - libssh2=1.11.0=hd019ec5_0
-  - libtiff=4.6.0=h129831d_3
-  - libwebp-base=1.4.0=h10d778d_0
-  - libxcb=1.15=hb7f2c08_0
-  - libxml2=2.12.6=hc0ae0f7_2
-  - libzlib=1.2.13=h8a1eda9_5
-  - lz4-c=1.9.4=hf0c8a7f_0
-  - lzo=2.10=h10d778d_1001
-  - menuinst=2.0.2=py312hb401068_0
-  - ncurses=6.4.20240210=h73e2aa4_0
-  - openjpeg=2.5.2=h7310d3a_0
-  - openssl=3.3.0=hd75f5a5_0
-  - packaging=24.0=pyhd8ed1ab_0
-  - pillow=10.3.0=py312h0c923fa_0
-  - pip=24.0=pyhd8ed1ab_0
-  - platformdirs=4.2.1=pyhd8ed1ab_0
-  - pluggy=1.5.0=pyhd8ed1ab_0
-  - pthread-stubs=0.4=hc929b4f_1001
-  - pyasn1=0.6.0=pyhd8ed1ab_0
-  - pyasn1-modules=0.4.0=pyhd8ed1ab_0
-  - pybind11-abi=4=hd8ed1ab_3
-  - pycosat=0.6.6=py312h104f124_0
-  - pycparser=2.22=pyhd8ed1ab_0
-  - pyopenssl=24.0.0=pyhd8ed1ab_0
-  - pysocks=1.7.1=pyha2e5f31_6
-  - pytesseract=0.3.13=pyhd8ed1ab_0
-  - python=3.12.3=h1411813_0_cpython
-  - python_abi=3.12=4_cp312
-  - readline=8.2=h9e318b2_1
-  - reproc=14.2.4.post0=h10d778d_1
-  - reproc-cpp=14.2.4.post0=h93d8f39_1
-  - requests=2.31.0=pyhd8ed1ab_0
-  - ruamel.yaml=0.18.6=py312h41838bb_0
-  - ruamel.yaml.clib=0.2.8=py312h41838bb_0
-  - service-identity=21.1.0=pyhd8ed1ab_0
-  - service_identity=21.1.0=hd8ed1ab_0
-  - setuptools=69.5.1=pyhd8ed1ab_0
-  - six=1.16.0=pyh6c4a22f_0
-  - soupsieve=2.5=pyhd8ed1ab_1
-  - sqlparse=0.4.4=pyhd8ed1ab_0
-  - tk=8.6.13=h1abcd95_1
-  - tqdm=4.66.2=pyhd8ed1ab_0
-  - truststore=0.8.0=pyhd8ed1ab_0
-  - twisted=24.3.0=py312h41838bb_0
-  - txaio=23.1.1=pyhd8ed1ab_0
-  - typing-extensions=4.11.0=hd8ed1ab_0
-  - typing_extensions=4.11.0=pyha770c72_0
-  - tzdata=2024a=h0c530f3_0
-  - urllib3=2.2.1=pyhd8ed1ab_0
-  - wheel=0.43.0=pyhd8ed1ab_1
-  - xorg-libxau=1.0.11=h0dc2134_0
-  - xorg-libxdmcp=1.1.3=h35c211d_0
-  - xz=5.2.6=h775f41a_0
-  - yaml-cpp=0.8.0=he965462_0
-  - zope.interface=6.3=py312h41838bb_0
-  - zstandard=0.22.0=py312h7a629f7_0
-  - zstd=1.5.5=h829000d_0
-prefix: /Users/keis/miniconda3/envs/chat
+_libgcc_mutex=0.1
+_openmp_mutex=4.5
+anaconda-anon-usage=0.4.4
+appdirs=1.4.4
+archspec=0.2.3
+attrs=23.2.0
+automat=22.10.0
+bcrypt=4.1.3
+boltons=23.0.0
+brotli-python=1.1.0
+bzip2=1.0.8
+c-ares=1.28.1
+ca-certificates=2024.6.2
+certifi=2024.6.2
+cffi=1.16.0
+charset-normalizer=2.0.4
+conda=24.5.0
+conda-content-trust=0.2.0
+conda-libmamba-solver=24.1.0
+conda-package-handling=2.2.0
+conda-package-streaming=0.9.0
+constantly=15.1.0
+cryptography=42.0.8
+distro=1.9.0
+expat=2.6.2
+fmt=10.2.1
+freetype=2.12.1
+frozendict=2.4.4
+hyperlink=21.0.0
+icu=73.2
+idna=3.7
+incremental=22.10.0
+jsonpatch=1.33
+jsonpointer=2.4
+keyutils=1.6.1
+krb5=1.21.2
+lcms2=2.16
+ld_impl_linux-64=2.38
+lerc=4.0.0
+libarchive=3.7.4
+libcurl=8.8.0
+libcxx=17.0.6
+libcxxabi=17.0.6
+libdeflate=1.20
+libedit=3.1.20230828
+libev=4.33
+libexpat=2.6.2
+libffi=3.4.4
+libgcc-ng=13.2.0
+libgomp=13.2.0
+libiconv=1.17
+libjpeg-turbo=3.0.0
+libmamba=1.5.8
+libmambapy=1.5.8
+libnghttp2=1.58.0
+libnsl=2.0.1
+libpng=1.6.43
+libsolv=0.7.29
+libsqlite=3.46.0
+libssh2=1.11.0
+libstdcxx-ng=13.2.0
+libtiff=4.6.0
+libuuid=2.38.1
+libwebp-base=1.4.0
+libxcb=1.15
+libxcrypt=4.4.36
+libxml2=2.12.7
+libzlib=1.3.1
+lz4-c=1.9.4
+lzo=2.10
+menuinst=2.1.1
+ncurses=6.5
+openjpeg=2.5.2
+openssl=3.3.1
+packaging=23.2
+pcre2=10.43
+pillow=10.3.0
+pip=24.0
+platformdirs=3.10.0
+pluggy=1.0.0
+pthread-stubs=0.4
+pyasn1=0.6.0
+pyasn1-modules=0.4.0
+pybind11-abi=4
+pycosat=0.6.6
+pycparser=2.21
+pyopenssl=24.0.0
+pysocks=1.7.1
+python=3.12.3
+python_abi=3.12
+readline=8.2
+reproc=14.2.4.post0
+reproc-cpp=14.2.4.post0
+requests=2.31.0
+ruamel.yaml=0.18.6
+ruamel.yaml.clib=0.2.8
+service-identity=21.1.0
+service_identity=21.1.0
+setuptools=69.5.1
+six=1.16.0
+sqlite=3.46.0
+tk=8.6.13
+tqdm=4.66.2
+truststore=0.8.0
+twisted=24.3.0
+typing-extensions=4.12.2
+typing_extensions=4.12.2
+tzdata=2024a
+urllib3=2.1.0
+wheel=0.43.0
+xorg-libxau=1.0.11
+xorg-libxdmcp=1.1.3
+xz=5.4.6
+yaml-cpp=0.8.0
+zlib=1.3.1
+zope.interface=6.4.post2
+zstandard=0.19.0
+zstd=1.5.6
