--- a/requirements.txt
+++ b/requirements.txt
@@ -13,13 +13,13 @@ click==8.1.7
 constantly==23.10.4
 cryptography==42.0.8
 daphne==4.1.2
-Django==5.0.7
+Django==5.0.8
 django-cors-headers==4.4.0
 djangorestframework==3.15.2
 h11==0.14.0
 hyperlink==21.0.0
 idna==3.7
-incremental==22.10.0
+incremental==24.7.2
 packaging==24.1
 pillow==10.4.0
 pyasn1==0.6.0
@@ -33,7 +33,7 @@ setuptools==70.3.0
 six==1.16.0
 soupsieve==2.5
 sqlparse==0.5.0
-Twisted==24.3.0
+Twisted==24.7.0rc1
 txaio==23.1.1
 typing_extensions==4.12.2
 tzdata==2024.1
